Enable javadoc plugin and generates javadoc for libs
Signed-off-by: David Kornel <kornys@outlook.com>