@@ -2,6 +2,7 @@
  * Copyright Skodjob authors.
  * License: Apache License 2.0 (see the file LICENSE or http://apache.org/licenses/LICENSE-2.0.html).
  */
+
 package io.skodjob.testframe.clients.cmdClient;
 
 import java.io.File;
@@ -24,6 +25,11 @@ import org.slf4j.LoggerFactory;
 import static java.lang.String.join;
 import static java.util.Arrays.asList;
 
+/**
+ * Abstract class representing a base Kubernetes command-line client.
+ *
+ * @param <K> The subtype of KubeClient, for fluency.
+ */
 public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implements KubeCmdClient<K> {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(BaseCmdKubeClient.class);
@@ -39,13 +45,30 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
 
     String namespace = defaultNamespace();
 
+    /**
+     * Constructor for BaseCmdKubeClient.
+     *
+     * @param config The Kubernetes configuration file path.
+     */
     protected BaseCmdKubeClient(String config) {
         this.config = config;
     }
 
+    /**
+     * Abstract method to retrieve the command.
+     *
+     * @return The command string.
+     */
     @Override
     public abstract String cmd();
 
+    /**
+     * Deletes a resource by its name.
+     *
+     * @param resourceType The type of the resource.
+     * @param resourceName The name of the resource.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K deleteByName(String resourceType, String resourceName) {
@@ -75,16 +98,34 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return command(asList(rest), true);
     }
 
+    /**
+     * Retrieves the YAML representation of a resource.
+     *
+     * @param resource     The type of the resource.
+     * @param resourceName The name of the resource.
+     * @return The YAML representation of the resource.
+     */
     @Override
     public String get(String resource, String resourceName) {
         return Exec.exec(namespacedCommand(GET, resource, resourceName, "-o", "yaml")).out();
     }
 
+    /**
+     * Retrieves the events from the cluster.
+     *
+     * @return The events as a string.
+     */
     @Override
     public String getEvents() {
         return Exec.exec(namespacedCommand(GET, "events")).out();
     }
 
+    /**
+     * Creates resources from files.
+     *
+     * @param files The files representing the resources.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K create(File... files) {
@@ -101,6 +142,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Applies resources from files.
+     *
+     * @param files The files representing the resources.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K apply(File... files) {
@@ -117,6 +164,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Deletes resources from files.
+     *
+     * @param files The files representing the resources.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K delete(File... files) {
@@ -154,6 +207,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return execResults;
     }
 
+    /**
+     * Replaces resources from files.
+     *
+     * @param files The files representing the resources.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K replace(File... files) {
@@ -169,6 +228,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Applies YAML content in the current namespace.
+     *
+     * @param yamlContent The YAML content.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K applyContentInNamespace(String yamlContent) {
@@ -178,6 +243,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Deletes YAML content in the current namespace.
+     *
+     * @param yamlContent The YAML content.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K deleteContentInNamespace(String yamlContent) {
@@ -187,6 +258,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Applies YAML content.
+     *
+     * @param yamlContent The YAML content.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K applyContent(String yamlContent) {
@@ -197,6 +274,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Deletes YAML content.
+     *
+     * @param yamlContent The YAML content.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K deleteContent(String yamlContent) {
@@ -207,6 +290,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Creates a namespace.
+     *
+     * @param name The name of the namespace.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K createNamespace(String name) {
@@ -216,6 +305,12 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return (K) this;
     }
 
+    /**
+     * Deletes a namespace.
+     *
+     * @param name The name of the namespace.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K deleteNamespace(String name) {
@@ -225,6 +320,14 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return (K) this;
     }
 
+    /**
+     * Scales resources by name.
+     *
+     * @param kind     The kind of the resource.
+     * @param name     The name of the resource.
+     * @param replicas The number of replicas.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K scaleByName(String kind, String name, int replicas) {
@@ -234,6 +337,13 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         }
     }
 
+    /**
+     * Executes a command in a pod.
+     *
+     * @param pod     The name of the pod.
+     * @param command The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult execInPod(String pod, String... command) {
         List<String> cmd = namespacedCommand("exec", pod, "--");
@@ -241,11 +351,28 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return Exec.exec(cmd);
     }
 
+    /**
+     * Executes a command in a pod container.
+     *
+     * @param pod       The name of the pod.
+     * @param container The name of the container.
+     * @param command   The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult execInPodContainer(String pod, String container, String... command) {
         return execInPodContainer(true, pod, container, command);
     }
 
+    /**
+     * Executes a command in a pod container with the option to log to output.
+     *
+     * @param logToOutput Whether to log the output.
+     * @param pod         The name of the pod.
+     * @param container   The name of the container.
+     * @param command     The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult execInPodContainer(boolean logToOutput, String pod, String container, String... command) {
         List<String> cmd = namespacedCommand("exec", pod, "-c", container, "--");
@@ -253,60 +380,131 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return Exec.exec(null, cmd, 0, logToOutput);
     }
 
+    /**
+     * Executes a command.
+     *
+     * @param command The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult exec(String... command) {
         return exec(true, command);
     }
 
+    /**
+     * Executes a command with the option to throw errors.
+     *
+     * @param throwError Whether to throw errors.
+     * @param command    The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult exec(boolean throwError, String... command) {
         return exec(throwError, true, command);
     }
 
+    /**
+     * Executes a command with the option to throw errors and log to output.
+     *
+     * @param throwError  Whether to throw errors.
+     * @param logToOutput Whether to log the output.
+     * @param command     The command to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult exec(boolean throwError, boolean logToOutput, String... command) {
         List<String> cmd = command(asList(command), false);
         return Exec.exec(null, cmd, 0, logToOutput, throwError);
     }
 
+    /**
+     * Executes a command in the current namespace.
+     *
+     * @param commands The commands to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult execInCurrentNamespace(String... commands) {
         return Exec.exec(namespacedCommand(commands));
     }
 
+    /**
+     * Executes a command in the current namespace with the option to log to output.
+     *
+     * @param logToOutput Whether to log the output.
+     * @param commands    The commands to execute.
+     * @return The execution result.
+     */
     @Override
     public ExecResult execInCurrentNamespace(boolean logToOutput, String... commands) {
         return Exec.exec(null, namespacedCommand(commands), 0, logToOutput);
     }
 
+    /**
+     * Converts the object to a string representation.
+     *
+     * @return The string representation of the object.
+     */
     @Override
     public String toString() {
         return cmd();
     }
 
+    /**
+     * Lists resources of a certain type.
+     *
+     * @param resourceType The type of the resource.
+     * @return A list of resource names.
+     */
     @Override
     public List<String> list(String resourceType) {
         return Arrays.stream(Exec.exec(namespacedCommand(GET, resourceType,
-                        "-o", "jsonpath={range .items[*]}{.metadata.name} "))
+                                "-o", "jsonpath={range .items[*]}{.metadata.name} "))
                         .out().trim().split(" +"))
                 .filter(s -> !s.trim().isEmpty()).collect(Collectors.toList());
     }
 
+    /**
+     * Retrieves a resource as JSON.
+     *
+     * @param resourceType The type of the resource.
+     * @param resourceName The name of the resource.
+     * @return The resource as JSON.
+     */
     @Override
     public String getResourceAsJson(String resourceType, String resourceName) {
         return Exec.exec(namespacedCommand(GET, resourceType, resourceName, "-o", "json")).out();
     }
 
+    /**
+     * Retrieves a resource as YAML.
+     *
+     * @param resourceType The type of the resource.
+     * @param resourceName The name of the resource.
+     * @return The resource as YAML.
+     */
     @Override
     public String getResourceAsYaml(String resourceType, String resourceName) {
         return Exec.exec(namespacedCommand(GET, resourceType, resourceName, "-o", "yaml")).out();
     }
 
+    /**
+     * Retrieves resources as YAML.
+     *
+     * @param resourceType The type of the resource.
+     * @return The resources as YAML.
+     */
     @Override
     public String getResourcesAsYaml(String resourceType) {
         return Exec.exec(namespacedCommand(GET, resourceType, "-o", "yaml")).out();
     }
 
+    /**
+     * Creates a resource from a template and applies it.
+     *
+     * @param template The template file.
+     * @param params   The parameters for the template.
+     */
     @Override
     public void createResourceAndApply(String template, Map<String, String> params) {
         List<String> cmd = namespacedCommand("process", template, "-l", "app=" + template, "-o", "yaml");
@@ -319,11 +517,25 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         applyContentInNamespace(yaml);
     }
 
+    /**
+     * Retrieves the description of a resource.
+     *
+     * @param resourceType The type of the resource.
+     * @param resourceName The name of the resource.
+     * @return The description of the resource.
+     */
     @Override
     public String describe(String resourceType, String resourceName) {
         return Exec.exec(namespacedCommand("describe", resourceType, resourceName)).out();
     }
 
+    /**
+     * Retrieves logs of a pod/container.
+     *
+     * @param pod       The name of the pod.
+     * @param container The name of the container.
+     * @return The logs as a string.
+     */
     @Override
     public String logs(String pod, String container) {
         String[] args;
@@ -335,12 +547,22 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return Exec.exec(namespacedCommand(args)).out();
     }
 
+    /**
+     * Searches for patterns in logs.
+     *
+     * @param resourceType The type of the resource.
+     * @param resourceName The name of the resource.
+     * @param sinceSeconds The duration since the logs should be searched.
+     * @param grepPattern  The patterns to search for.
+     * @return The matching lines from logs.
+     */
     @Override
     public String searchInLog(String resourceType, String resourceName, long sinceSeconds, String... grepPattern) {
         try {
             return Exec.exec("bash", "-c", join(" ",
-                    namespacedCommand("logs", resourceType + "/" + resourceName, "--since=" + sinceSeconds + "s",
-                    "|", "grep", " -e " + join(" -e ", grepPattern), "-B", "1")))
+                            namespacedCommand("logs", resourceType + "/" + resourceName,
+                                    "--since=" + sinceSeconds + "s",
+                                    "|", "grep", " -e " + join(" -e ", grepPattern), "-B", "1")))
                     .out();
         } catch (KubeClusterException e) {
             if (e.result != null && e.result.returnCode() == 1) {
@@ -352,6 +574,16 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return "";
     }
 
+    /**
+     * Searches for patterns in logs of a specific container.
+     *
+     * @param resourceType      The type of the resource.
+     * @param resourceName      The name of the resource.
+     * @param resourceContainer The name of the container.
+     * @param sinceSeconds      The duration since the logs should be searched.
+     * @param grepPattern       The patterns to search for.
+     * @return The matching lines from logs.
+     */
     @Override
     public String searchInLog(String resourceType, String resourceName, String resourceContainer,
                               long sinceSeconds, String... grepPattern) {
@@ -369,10 +601,17 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return "";
     }
 
+    /**
+     * Lists resources by label.
+     *
+     * @param resourceType The type of the resource.
+     * @param label        The label.
+     * @return A list of resource names.
+     */
     @Override
     public List<String> listResourcesByLabel(String resourceType, String label) {
         return asList(Exec.exec(namespacedCommand(GET, resourceType,
-                "-l", label, "-o", "jsonpath={range .items[*]}{.metadata.name} "))
+                        "-l", label, "-o", "jsonpath={range .items[*]}{.metadata.name} "))
                 .out().split("\\s+"));
     }
 
@@ -391,16 +630,22 @@ public abstract class BaseCmdKubeClient<K extends BaseCmdKubeClient<K>> implemen
         return result;
     }
 
+    /**
+     * Processes a template file with parameters.
+     *
+     * @param parameters The parameters for the template.
+     * @param file       The template file.
+     * @param c          The consumer to process the output.
+     * @return The instance of the client.
+     */
     @Override
     @SuppressWarnings("unchecked")
     public K process(Map<String, String> parameters, String file, Consumer<String> c) {
         List<String> command = command(asList(PROCESS, "-f", file), false);
-        command.addAll(parameters.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue()).toList());
-        ExecResult exec = Exec.builder()
-                .throwErrors(true)
-                .withCommand(command)
-                .exec();
-        c.accept(exec.out());
+        command.addAll(parameters.entrySet().stream()
+                .map(e -> "-p " + e.getKey() + "=" + e.getValue())
+                .collect(Collectors.toList()));
+        c.accept(Exec.exec(null, command, 0, false).out());
         return (K) this;
     }
 }
